manifests/infra/kube-prometheus-stack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.37.27.124.54.nip.io
      secretName: grafana-tls
  rules:
    - host: grafana.37.27.124.54.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
